SERVER-15087 check for dropped collection in MR

(cherry picked from commit aa5c0a136c9ab37023d89908c8b02d6d687ed070)